<?xml version="1.0"?>
<package format="2">
  <name>snake_game</name>
  <version>0.0.0</version>
  <description>snake game for turtlesim</description>

  <maintainer email="arsenious@todol.com">Manan Gupta</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlesim</exec_depend>

  
  <export>
    

  </export>
</package>
